<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editTextTitol"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/t_tol_de_la_tasca"
            android:inputType="text"/>

        <EditText
            android:id="@+id/editTextDescripcio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/descripci"
            android:inputType="textMultiLine"
            android:minLines="2"
            android:gravity="top"
            android:layout_marginTop="8dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/data_l_mit"
            android:layout_marginTop="12dp"/>

        <TextView
            android:id="@+id/textViewDataLimit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/toca_per_seleccionar_la_data"
            android:background="#EEEEEE"
            android:padding="8dp"
            android:layout_marginTop="4dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activar_recordatori"
            android:layout_marginTop="12dp"/>

        <TextView
            android:id="@+id/textviewRecordatori"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/toca_per_seleccionar_data_de_recordatorio"
            android:background="#EEEEEE"
            android:padding="8dp"
            android:layout_marginTop="4dp"/>

        <TextView
            android:id="@+id/textviewEstado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/estado"
            android:layout_marginTop="12dp"/>

        <Spinner
            android:id="@+id/spinnerEstat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"/>

        <Button
            android:id="@+id/buttonGuardarTasca"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/guardar"
            android:layout_marginTop="16dp"/>
    </LinearLayout>
</ScrollView>
