<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editTextTitol"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/t_tol_del_esdeveniment"
            android:inputType="text" />

        <EditText
            android:id="@+id/editTextDescripcio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/descripci"
            android:inputType="textMultiLine"
            android:minLines="2"
            android:gravity="top"
            android:layout_marginTop="8dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/data_inici" />

        <TextView
            android:id="@+id/textViewDataLimit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:background="#EEEEEE"
            android:padding="8dp"
            android:text="@string/toca_per_seleccionar_la_data" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/data_finalitzaci" />

        <TextView
            android:id="@+id/textviewFinalitzacio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:background="#EEEEEE"
            android:padding="8dp"
            android:text="@string/toca_per_seleccionar_la_data" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/activar_recordatori" />

        <TextView
            android:id="@+id/textviewRecordatori"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:background="#EEEEEE"
            android:padding="8dp"
            android:text="@string/toca_per_seleccionar_la_data" />


        <Button
            android:id="@+id/buttonGuardarEsdeveniment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Guardar" />
    </LinearLayout>
</ScrollView>
