<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="ExtraText">

        <!-- Icono Menú (parte superior izquierda) -->

        <View
            android:id="@+id/lineaGris8"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="#D3D3D3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="60dp" />


        <!-- Título "Perfil" -->
        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:paddingTop="20dp"
            android:text="@string/perfil"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Icono Editar -->

        <!-- Imagen de Perfil -->
        <ImageView
            android:id="@+id/ivEdit"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="Editar perfil"
            android:src="@drawable/ic_edit"
            app:layout_constraintBottom_toBottomOf="@+id/tvTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/btnOpenMenu"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:src="@drawable/ic_menu"
            app:layout_constraintBottom_toBottomOf="@+id/tvTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <!-- Campos de Entrada -->
        <ImageView
            android:id="@+id/profileicon"
            android:layout_width="200dp"
            android:layout_height="175dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle"
            app:layout_constraintVertical_bias="0.13999999"
            tools:srcCompat="@tools:sample/avatars"
            android:background="#FF0000"/>

        <TextView
            android:id="@+id/viewname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombre_perfil"
            app:layout_constraintBottom_toTopOf="@+id/editname"
            app:layout_constraintStart_toStartOf="@+id/editname" />

        <EditText
            android:id="@+id/editname"
            android:layout_width="270dp"
            android:layout_height="50dp"
            android:layout_marginTop="50dp"
            android:editable="false"
            android:enabled="false"
            android:inputType="text"
            android:text="Jhoanna Doe"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profileicon" />

        <TextView
            android:id="@+id/viewemail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_perfil"
            app:layout_constraintBottom_toTopOf="@+id/editemail"
            app:layout_constraintStart_toStartOf="@+id/editemail" />

        <EditText
            android:id="@+id/editemail"
            android:layout_width="270dp"
            android:layout_height="50dp"
            android:layout_marginTop="36dp"
            android:editable="false"
            android:enabled="false"
            android:inputType="text"
            android:text="name@example.com"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.507"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editname" />

        <TextView
            android:id="@+id/viewphone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/telefono"
            app:layout_constraintBottom_toTopOf="@+id/editphone"
            app:layout_constraintStart_toStartOf="@+id/editphone" />

        <EditText
            android:id="@+id/editphone"
            android:layout_width="270dp"
            android:layout_height="50dp"
            android:layout_marginTop="36dp"
            android:layout_marginBottom="50dp"
            android:editable="false"
            android:enabled="false"
            android:inputType="phone"
            android:text="123-456-7890"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editemail" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
